# TheArcade

./: CMakeLists.txt
resources/: beta_games.txt  games.txt  main.gui
resources/gui/theme/: basic.theme.txt
src/: cameraCaptureTexture.cpp  cameraCaptureTexture.h  main.cpp  performanceTest.cpp  performanceTest.h  unfocusedKeyInfo.cpp  unfocusedKeyInfo.h
